--- a/pyServer/index.html
+++ b/pyServer/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>Python is awesome!</title>
+        <title>Python Server</title>
     </head>
     <body>
-        <h1>Afternerd</h1>
-        <p>Congratulations! The HTTP Server is working!</p>
+        <h1>PyServer</h1>
+        <p>This Python Server is running on a docker container</p>
     </body>
 </html>
